--- a/Informe.Rmd
+++ b/Informe.Rmd
@@ -1,15 +1,7 @@
 ---
 title: "Accidentalidad en medellín periodo de 2014 a 2020 y predicción de accidentalidad para los años 2021 y 2022."
 date: "23/11/2022"
-output: 
-  html_document:
-    theme: spacelab
-    code_folding: hide
-    code_download: yes
-    df_print: paged
-    toc: true
-    toc_float: 
-      colapse: false
+output: rmdformats::downcute
 ---
 
 ```{r setup, include=FALSE}
@@ -78,7 +70,12 @@ Los datos fueron obtenidos de la plataforma [medata](http://medata.gov.co/datase
 
 ```{r message=FALSE, warning=FALSE,echo=FALSE}
 #Mostramos las primeras 5 observaciones de la base de datos
-head(bd,n=5)
+#head(bd,n=5)
+library(DT)
+DT::datatable(head(bd), editable = list(
+  target = 'row', disable = list(columns = c(1, 3, 4))
+))
+
 ```
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
@@ -174,7 +171,7 @@ En esta sección hicimos integración entre los datos de nuestra base de datos y
 
 #### 1.1.1 Integración de datos Geo-Medellín
 <div style="text-align: justify">
-Para la integración de los datos usamos lo datos contenidos en la pagina web [Geo medellín](https://geomedellin-m-medellin.opendata.arcgis.com/datasets/M-Medellin::limite-barrio-vereda-catastral/about), de nuestra base de datos usamos la variable CBML y con los primeros 4 dígitos poder obtener los datos faltantes de barrio y comuna cruzando los datos entre nuestra base de datos y la de geo Medellín.
+Para la integración de los datos usamos lo datos contenidos en la pagina web [Geo medellín](https://geomedellin-m-medellin.opendata.arcgis.com/datasets/M-Medellin::limite-barrio-vereda-catastral/about), de nuestra base de datos usamos la variable CBML y con los primeros 4 dígitos poder obtener los datos faltantes de barrio y comuna cruzando los datos entre nuestra base y la de geo Medellín.
 </div>
 
 ```{r message=FALSE, warning=FALSE, echo=FALSE, results = 'hide'}
@@ -258,10 +255,9 @@ base2 <- plyr::rename(base2,  c("FECHA_ACCIDENTE"="FECHA","NOMBRE_BAR"="BARRIO",
 #### 1.1.3 Días feriados
 
 <div style="text-align: justify">
-Para las fechas especiales se crean dos nuevas variables; `FESTIVIDAD` y `TIPO_FESTIVIDAD`. Estas variables provienen de una base de datos externa que se adiciona a la base de análisis y abarca los días feriados en Colombia desde 2014 hasta 2021.
+Para las fechas especiales se crean dos nuevas variables; `FESTIVIDAD` y `TIPO_FESTIVIDAD`. Estas variables provienen de una base de datos externa que se adiciona a la base de análisis y abarca los días feriados en Colombia desde 2014 hasta 2022.
 
 **FESTIVIDAD:** contiene dos etiquetas (SI/NO). SI: cuando hay festividad para ese día. NO: cuando no hay festividad para ese día,  
-
 **TIPO_FESTIVIDAD:** contiene seis tipos de festividad:  
 **FESTIVO:** día feriado.  
 **NAVIDAD:** 24,25 y 31 de diciembre.  
@@ -330,7 +326,9 @@ Luego de realizar todo el pre procesamiento a la base de datos, podemos observar
 
 
 ```{r message=FALSE, warning=FALSE,echo=FALSE}
-head(base2,n=5)
+DT::datatable(head(base2), editable = list(
+  target = 'row', disable = list(columns = c(1, 3, 4))
+))
 ```
 
 </br>
@@ -348,12 +346,12 @@ En esta sección realizaremos el análisis descriptivo por las variables que con
 ### 2.1 Accidentes mensuales por Año
 
 <div style="text-align: justify">
-En el año 2014 no hay registrados datos de accidentes antes del 4 de julio, lo cual no significa que en estas fechas no ocurrieran accidentes. -Al igual que en 2014, en el año 2020 no se han registrado accidentes en la base de datos abiertos de Medellín, después del 31 de agosto hasta la fecha actual.
+En el año 2014 no hay registrados datos de accidentes antes del 4 de julio. Al igual que en 2014, en el año 2020 no se han registrado datos correspondientes a accidentes después del 31 de agosto.
 </div>
 
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
-bd_final <- base2
+bd_final <-read.csv("./datos/base_depurada3.csv")
 ```
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
@@ -378,7 +376,7 @@ aggregate(numero_de_accidentes~ano*mes, data = accidentes_mes_ano, FUN = mean) %
 ### 2.2 Accidentes por día de la semana
 
 <div style="text-align: justify">
-El día que presenta mayor cantidad de personas accidentadas, es el día viernes seguido del día martes, con una diferencia de 655 accidentes registrados. Seguido de esto los días miércoles – jueves y lunes – sábado, presentan una accidentalidad similar con una diferencia de 331 y 46 accidentes de diferencia, respectivamente, y el día domingo es el día con menor número de accidentes registrados.
+El día que presenta mayor cantidad de personas accidentadas, es el día viernes seguido del día martes, con una diferencia de 655 accidentes registrados. Seguido de esto los días (miércoles – jueves) y (lunes – sábado), presentan una accidentalidad similar con una diferencia de 331 y 46 accidentes de diferencia, respectivamente, y el día domingo es el día con menor número de accidentes registrados.
 </div>
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
@@ -388,7 +386,7 @@ accidentes_semana <- bd_final %>%
 ```
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
-accidentes_semana$DIA_SEMANA <- ordered(accidentes_semana$DIA_SEMANA, levels = c("lunes","martes","miércoles","jueves","viernes","sábado","domingo"))
+accidentes_semana$DIA_SEMANA <- ordered(accidentes_semana$DIA_SEMANA, levels = c("lunes","martes","miercoles","jueves","viernes","sabado","domingo"))
 ```
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
@@ -528,7 +526,7 @@ ggplot(data = accidentes_clase, aes(fill = CLASE, x = CLASE, y = numero_de_accid
   geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
   xlab("Gravedad") + 
   ylab("Número de acccidentes") + 
-  ggtitle("Número de accidentes por gravedad") +
+  ggtitle("Número de accidentes por clase") +
   ylim(c(0,170000))+
   theme(plot.title = element_text(hjust = 0.5),legend.position = "none")
   
@@ -567,7 +565,7 @@ accidentes_tipo_festividad <- bd_final %>%
   group_by(TIPO_FESTIVIDAD) %>%
   summarise(numero_de_accidentes = n())
 
-accidentes_tipo_festividad <- accidentes_tipo_festividad[c(1,2,4,5,6),]
+accidentes_tipo_festividad <- accidentes_tipo_festividad[c(1,2,3,4,5),]
 ```
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE}
